--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>user-service</module>
         <module>order-service</module>
+        <module>eureka-server</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -34,7 +35,7 @@
         <mybatis.version>2.1.1</mybatis.version>
     </properties>
 
-    <!-- 依赖管理 -->
+    <!-- 依赖管理：父工程管理版本，字模块用到相关依赖就不用写版本了 -->
     <dependencyManagement>
         <dependencies>
             <!-- springCloud -->
